--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pods",
     "plugin",
     "example",
-    "demo",
+    "demo"
   ],
   "author": "Carlos \"blakgeek\" Lawton",
   "license": "MIT",
